Correction des boutons "default". Alignement central du formulaire du minichat.

--- a/app/static/css/lexpage/_layout.scss
+++ b/app/static/css/lexpage/_layout.scss
@@ -125,7 +125,6 @@ input[type="file"] {
 h2 .btn {
   @extend .btn-default;
   @extend .btn-xs;
-  color: $text-muted;
 }
 
 .btn-toolbar .btn-group .btn {
