--- a/app/static/css/lexpage/_sidebar.scss
+++ b/app/static/css/lexpage/_sidebar.scss
@@ -24,6 +24,7 @@
 }
 
 #minichat_form {
+  @extend .center-block;
   padding-top: $padding-large-vertical;
   border-top: 2px dotted $brand-primary;
 }
