--- a/app/static/css/lexpage/_variables.scss
+++ b/app/static/css/lexpage/_variables.scss
@@ -45,12 +45,19 @@ $border-radius-base:        5px; //10px;
 $border-radius-large:       8px; //14px;
 
 
+//== Buttons
+//
+
+$btn-default-color:              $gray-light;
+
+
 //== Dropdowns
 //
 
 $dropdown-link-color:            $brand-primary-alt;
 $dropdown-link-hover-color:      #fff;
 $dropdown-link-hover-bg:         $brand-primary-alt;
+
 
 //== Navbar
 //
